--- a/assets/styles.css
+++ b/assets/styles.css
@@ -27,4 +27,17 @@ button {
   cursor: pointer;
 }
 
+@font-face {
+  font-family: "Roboto";
+  src: url("../assets/__fonts/Roboto-Bold.ttf") format("truetype"), url("../assets/__fonts/Roboto-Light.ttf") format("truetype"), url("../assets/__fonts/Roboto-Medium.ttf") format("truetype");
+  font-weight: bold, lighter, medium;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Shrikhand";
+  src: url("../assets/__fonts/Shrikhand-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 /*# sourceMappingURL=styles.css.map */
