--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,3 +8,20 @@ $color-grey-dark: #353535;
 $color-grey-lighter: #F6F6F6;
 $color-grey-medium: #7E7E7E;
 $color-grey-light: #EAEAEA;
+
+// TYPOGRAPHIE
+@font-face {
+    font-family: 'Roboto';
+    src: url('../assets/__fonts/Roboto-Bold.ttf') format('truetype'),
+         url('../assets/__fonts/Roboto-Light.ttf') format('truetype'),
+         url('../assets/__fonts/Roboto-Medium.ttf') format('truetype');
+    font-weight: bold, lighter, medium;
+    font-style: normal;
+  }
+  
+@font-face {
+    font-family: 'Shrikhand';
+    src: url('../assets/__fonts/Shrikhand-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
