--- a/assets/styles.css
+++ b/assets/styles.css
@@ -39,5 +39,29 @@ button {
   font-weight: normal;
   font-style: normal;
 }
+.card {
+  width: 100%;
+  height: 250px;
+  background-color: aqua;
+  border: 2px solid red;
+}
+.card__img {
+  object-fit: cover;
+  width: 100%;
+  height: 70%;
+}
+.card__content {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 30%;
+  padding: 16px;
+}
+.main-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 1440px;
+  min-width: 320px;
+}
 
 /*# sourceMappingURL=styles.css.map */
