--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,1 +1,98 @@
-@import 'variables';
+@mixin text-truncate {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+// LAYOUT
+@mixin center($type: both) {
+    @if $type == horizontal {
+      margin-left: auto;
+      margin-right: auto;
+    }
+    @else if $type == vertical {
+      margin-top: auto;
+      margin-bottom: auto;
+    }
+    @else if $type == both {
+      margin: auto;
+    }
+}
+
+@mixin sizing($width: auto, $height: auto) {
+    @if $width { width: $width; }
+    @if $height { height: $height; }
+}
+
+@mixin position($position: absolute, $top: false, $right: false, $bottom: false, $left: false) {
+    position: $position;
+    @if $top { top: $top; }
+    @if $right { right: $right; }
+    @if $bottom { bottom: $bottom; }
+    @if $left { left: $left; }
+}
+
+// DISPLAYS
+@mixin flex($direction: column, $justify: center, $align: center) {
+    display: flex;
+    @if $direction { flex-direction: $direction; }
+    @if $justify { justify-content: $justify; }
+    @if $align { align-items: $align; }
+}
+
+@mixin grid($columns: auto, $rows: auto, $gap: 0) {
+    $columns: if(type-of($columns) == number, #{$columns}fr, $columns);
+    $rows: if(type-of($rows) == number, #{$rows}fr, $rows);
+    
+    display: grid;
+    grid-template-columns: $columns;
+    grid-template-rows: $rows;
+    gap: $gap;
+}
+
+// TYPO
+@mixin font-primary($size: $font-size-m, $color: $color-black, $weight: $font-weight-normal,  $lh: false) {
+    font-family: $font-primary;
+    @if $size { font-size: $size; }
+    @if $color { color: $color; }
+    @if $weight { font-weight: $weight; }
+    @if $lh { line-height: $lh; }
+}
+
+@mixin font-secondary($size: $font-size-xl, $colour: false, $weight: false,  $lh: false) {
+    font-family: $font-secondary;
+    @if $size { font-size: $size; }
+    @if $colour { color: $colour; }
+    @if $weight { font-weight: $weight; }
+    @if $lh { line-height: $lh; }
+}
+
+// ANIMATION
+@mixin transition($property: all, $duration: 0.3s, $ease: ease) {
+    transition: $property $duration $ease;
+}
+
+// BREAKPOINTS
+@mixin breakpoint($point) {
+    @if $point == xl {
+      @media (max-width: 75em) { @content; }
+    }
+    @else if $point == minxl {
+      @media (min-width: 75em) { @content; }
+    }  
+    @else if $point == lg {
+      @media (max-width: 62em) { @content; }
+    }
+    @else if $point == md {
+      @media (max-width: 48em)  { @content; }
+    }
+    @else if $point == sm {
+      @media (max-width: 34em)  { @content; }
+    }  
+    @else if $point == mobile {
+      @media (max-width: 25em)  { @content; }
+    }  
+    @else if $point == mobilexs {
+      @media (max-width: 21.875em)  { @content; }
+    }      
+}
