--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,39 +1,61 @@
-.card {
-    width: 100%;
-    height: 250px;
-    background-color: aqua;
-    border: 2px solid red;
+.header {
+    @include flex;
+        &__logo {
+            @include sizing(200px, 36px);
+            margin: 1em;
+        }
+        &__localisation {
+            background-color: $color-grey-light;
+            @include sizing(100%);
+            @include flex(row);
+            @include font-primary($font-size-xs, $color-black, $font-weight-medium);
+            padding: 1em 0;
+            gap: 1em;
+            box-shadow: 0px 4px 4px 0px #00000040;
+        }
+}
 
+.cta-btn {
+    background: linear-gradient(360deg, #9356DC -11.44%, #FF79DA 123.93%);
+    padding: 1em 1.3em;
+    border-radius: 25px;
+    box-shadow: 0px 4px 10px 0px #00000040;
+    @include font-primary($font-size-xs, $color-white, $font-weight-medium);
+}
+
+.card {
+    @include sizing(100%, 250px);
+    border-radius: 15px;
+    @include position(relative);
         &__img {
             object-fit: cover;
-            width: 100%;
-            height: 70%;
+            @include sizing(100%, 70%);
+            border-radius: 15px 15px 0 0;
         }
-
         &__badge {
-
+            @include position(absolute, $top: 1em, $right:1em);
+            background-color: $color-green-light;
+            @include font-primary($font-size-xs, $color-green-dark, $font-weight-medium);
+            padding: 0.5rem 0.7rem;
         }
-
         &__content {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            height: 30%;
-            padding: 16px;
-
-
+            background-color: $color-white;
+            @include sizing(100%, 30%);
+            @include position(relative);
+            padding: 1em;
+            border-radius: 0 0 15px 15px;
         }
-
-        &__txt {
-
-
-        }
+        .heart-btn {
+            font-size: $font-size-l;
+            @include position(absolute, $top: 0.7em, $right: 1em);
+        } 
 
         &__title {
-
+            @include font-primary($font-size-m, $color-black, $font-weight-bold, 1.3em);
         }
 
         &__subtitle {
-
+            @include font-primary($font-size-s, $color-black, $font-weight-light, 1.3em);
         }
 }
+
