--- a/sass/_typo.scss
+++ b/sass/_typo.scss
@@ -1,15 +1,35 @@
 @font-face {
-    font-family: 'Roboto';
-    src: url('../assets/__fonts/Roboto-Bold.ttf') format('truetype'),
-         url('../assets/__fonts/Roboto-Light.ttf') format('truetype'),
-         url('../assets/__fonts/Roboto-Medium.ttf') format('truetype');
-    font-weight: bold, lighter, medium;
-    font-style: normal;
-  }
-  
+  font-family: 'Roboto';
+  src: url('../assets/__fonts/Roboto-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
 @font-face {
-    font-family: 'Shrikhand';
-    src: url('../assets/__fonts/Shrikhand-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-  }
+  font-family: 'Roboto';
+  src: url('../assets/__fonts/Roboto-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('../assets/__fonts/Roboto-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Shrikhand';
+  src: url('../assets/__fonts/Shrikhand-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.section-title {
+  @include font-primary($font-size-l, $color-black, $font-weight-bold);
+}
+
+.section-subtitle {
+  @include font-primary($font-size-m, $color-black, $font-weight-light);
+}
