--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,17 +9,17 @@ $color-grey-lighter: #F6F6F6;
 $color-grey-medium: #7E7E7E;
 $color-grey-light: #EAEAEA;
 
-// TYPOGRAPHIE
+// TYPO
 $font-primary: 'Roboto', sans-serif;
 $font-secondary: 'Shrikhand';
 
-$font-size-xl: 28px;
-$font-size-l: 24px;
-$font-size-m: 18px;
-$font-size-s: 17px;
-$font-size-xs: 16px;
+$font-size-xl: 1.75rem;//28px;
+$font-size-l: 1.5rem;//24px;
+$font-size-m: 1.125rem;//18px;
+$font-size-s: 1.0625rem;//17px;
+$font-size-xs: 1rem; //16px;
 
-$font-weight-bold: bold;
-$font-weight-light: lighter;
-$font-weight-medium: medium;
-$font-weight-normal: normal;
+$font-weight-bold: 700;
+$font-weight-medium: 500;
+$font-weight-normal: 400;
+$font-weight-light: 300;
