--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,6 +1,7 @@
 @import 'reset';
 @import 'variables';
-@import 'typo';
 @import 'mixins';
+@import 'typo';
 @import 'components';
 @import 'layout';
+@import 'responsive';
