--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -18,6 +18,7 @@ $font-size-l: 1.5rem;//24px;
 $font-size-m: 1.125rem;//18px;
 $font-size-s: 1.0625rem;//17px;
 $font-size-xs: 1rem; //16px;
+$font-size-xxs: 0.875rem;//14px;
 
 $font-weight-bold: 700;
 $font-weight-medium: 500;
