--- a/assets/styles.css
+++ b/assets/styles.css
@@ -65,14 +65,22 @@ button {
 }
 
 .header {
+  width: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+.header .header-icon {
+  position: absolute;
+  top: 1em;
+  left: 1em;
+  font-size: 1.5rem;
+}
 .header__logo {
-  width: 200px;
-  height: 36px;
+  width: 160px;
+  height: 42px;
   margin: 1em;
 }
 .header__localisation {
@@ -103,19 +111,74 @@ button {
   font-weight: 500;
 }
 
-.card {
+.step-card {
+  background-color: #F6F6F6;
+  width: 100%;
+  height: auto;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding: 28px;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1490196078);
+}
+.step-card__content {
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  color: #000000;
+  font-weight: 500;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 12px;
+  width: 100%;
+  height: auto;
+  text-wrap: nowrap;
+}
+.step-card__icon {
+  width: 38px;
+  height: auto;
+  font-size: 1.125rem;
+  color: #7E7E7E;
+  padding-left: 12px;
+}
+.step-card .fa-store {
+  color: #9356DC;
+}
+.step-card__number {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: center;
+  left: -12px;
+  font-family: "Roboto", sans-serif;
+  font-size: 0.875rem;
+  color: #FFFFFF;
+  font-weight: 400;
+  width: 25px;
+  height: 25px;
+  background-color: #9356DC;
+  border-radius: 25px;
+}
+
+.restaurant-card {
   width: 100%;
   height: 250px;
   border-radius: 15px;
   position: relative;
 }
-.card__img {
+.restaurant-card__img {
   object-fit: cover;
   width: 100%;
   height: 70%;
   border-radius: 15px 15px 0 0;
 }
-.card__badge {
+.restaurant-card__badge {
   position: absolute;
   top: 1em;
   right: 1em;
@@ -126,7 +189,7 @@ button {
   font-weight: 500;
   padding: 0.5rem 0.7rem;
 }
-.card__content {
+.restaurant-card__content {
   background-color: #FFFFFF;
   width: 100%;
   height: 30%;
@@ -134,20 +197,20 @@ button {
   padding: 1em;
   border-radius: 0 0 15px 15px;
 }
-.card .heart-btn {
+.restaurant-card .heart-btn {
   font-size: 1.5rem;
   position: absolute;
   top: 0.7em;
   right: 1em;
 }
-.card__title {
+.restaurant-card__title {
   font-family: "Roboto", sans-serif;
   font-size: 1.125rem;
   color: #000000;
   font-weight: 700;
   line-height: 1.3em;
 }
-.card__subtitle {
+.restaurant-card__subtitle {
   font-family: "Roboto", sans-serif;
   font-size: 1.0625rem;
   color: #000000;
@@ -155,51 +218,207 @@ button {
   line-height: 1.3em;
 }
 
-.none {
-  display: none;
+.footer {
+  width: 100%;
+  height: auto;
+  background-color: #353535;
+  padding: 22px;
+}
+.footer__title {
+  font-family: "Shrikhand";
+  font-size: 1.125rem;
+  color: #FFFFFF;
+  font-weight: 400;
+  padding-bottom: 1em;
+}
+.footer__link {
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  color: #FFFFFF;
+  font-weight: 300;
+  line-height: 1.8em;
+}
+.footer .footer-icon {
+  width: 30px;
+  height: auto;
 }
 
-body {
+.item-card {
+  width: 100%;
+  height: 72px;
+  border-radius: 15px;
+  box-shadow: 0px 4.01px 15.04px 0px rgba(0, 0, 0, 0.1019607843);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.item-card__content {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  padding: 1em;
+}
+.item-card__title {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.125rem;
+  color: #000000;
+  font-weight: 500;
+  line-height: 1.5em;
+}
+.item-card__subtitle {
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  color: #000000;
+  font-weight: 300;
+}
+.item-card__price {
+  align-self: flex-end;
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  color: #000000;
+  font-weight: 700;
+}
+.item-card .select-trigger {
+  background-color: #99E2D0;
+  border-radius: 0 15px 15px 0;
+  width: 60px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: #FFFFFF;
+}
+
+.none {
+  display: none;
 }
 
 .main-container {
   width: 100%;
   height: auto;
-  max-width: 1440px;
+  max-width: 100vw;
   min-width: 320px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+main {
+  width: 100%;
+  height: auto;
 }
 
 section {
-  padding: 20px;
-}
-
-.hero {
-  background-color: #F6F6F6;
-  padding: 2em;
   width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
   gap: 1em;
+  padding: 60px 20px;
+}
+section:nth-child(2n-1) {
+  background-color: #F6F6F6;
+}
+
+.section-title {
+  align-self: flex-start;
+}
+
+.card-wrapper {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+}
+
+.hero {
+  padding: 2em;
+  text-align: center;
 }
 .hero__title {
   padding: 0 1em;
+  align-self: center;
 }
 .hero .cta-btn {
   margin-top: 1em;
 }
 
-.restaurants {
+.menu-banner {
+  width: 100%;
+  height: 275px;
+  object-fit: cover;
+  position: relative;
+}
+
+.menu {
+  position: absolute;
+  top: 270px;
   background-color: #F6F6F6;
+  border-radius: 25px;
   width: 100%;
   height: auto;
+  max-width: 1000px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 32px 0;
+}
+.menu__header {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+}
+.menu .heart-btn {
+  font-size: 1.5rem;
+}
+.menu__title {
+  font-family: "Shrikhand";
+  font-size: 1.75rem;
+  color: #000000;
+  font-weight: 400;
+}
+.menu__section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.menu .menu__section-title {
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  color: #000000;
+  font-weight: 300;
+}
+.menu .title-underline {
+  border-bottom: 2px solid #99E2D0;
+  padding: 0.3em 0;
+}
+.menu .cta-btn {
+  align-self: center;
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+.menu-footer {
+  position: absolute;
+  top: 100vh;
 }
 
 /*# sourceMappingURL=styles.css.map */
