--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -2,14 +2,12 @@
     display: none
 }
 
-
 .main-container {
     @include sizing(100%);
     max-width: 100vw;
     min-width: 320px;
     @include position(relative);
     @include flex(column, center, center);
-
 }
 
 main {
@@ -23,7 +21,7 @@ section {
         &:nth-child(2n-1) {
             background-color: $color-grey-lighter;
     }
-     }
+}
 
 .section-title {
     align-self: flex-start
@@ -41,7 +39,6 @@ section {
             padding: 0 1em;
             align-self: center;
         }
-
         .cta-btn {
             margin-top: 1em;
         }
@@ -54,11 +51,10 @@ section {
 .menu-banner {
     @include sizing(100%, 275px);
     object-fit: cover;
-    position: relative;
 }
 
 .menu {
-    @include position(absolute, $top:270px);
+    margin-top: -2em;
     background-color: $color-grey-lighter;
     border-radius: 25px;
     @include sizing(100%);
@@ -77,7 +73,6 @@ section {
 
         &__title {
             @include font-secondary($font-size-xl, $color-black, $font-weight-normal);
-        
         }
 
         &__section {
@@ -98,12 +93,6 @@ section {
             align-self: center;
             padding-left: 60px;
             padding-right: 60px;
-        }
-
-
-        
+        }       
 }
 
-.menu-footer {
-    @include position(absolute, $top: 100vh);
-}
