--- a/assets/styles.css
+++ b/assets/styles.css
@@ -267,6 +267,7 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  padding-left: 1em;
 }
 .item-card__title {
   font-family: "Roboto", sans-serif;
@@ -316,7 +317,6 @@ button {
 .main-container {
   width: 100%;
   height: auto;
-  max-width: 100vw;
   min-width: 320px;
   position: relative;
   display: flex;
@@ -374,9 +374,12 @@ section:nth-child(2n-1) {
   width: 100%;
   height: 275px;
   object-fit: cover;
+  position: relative;
+  z-index: -1;
 }
 
 .menu {
+  place-self: center;
   margin-top: -2em;
   background-color: #F6F6F6;
   border-radius: 25px;
@@ -640,6 +643,67 @@ section:nth-child(2n-1) {
   }
   100% {
     opacity: 1;
+  }
+}
+@media (min-width: 48em) {
+  .menu__header {
+    place-content: center;
+    gap: 1.5em;
+  }
+  .restaurants__cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 3em;
+  }
+}
+@media (min-width: 64em) {
+  .steps__tags {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: auto;
+  }
+  .step-card {
+    padding: 28px 22px;
+  }
+  .restaurants, .steps {
+    padding: 3em 8em;
+  }
+  .menu {
+    padding: 3em 10em;
+  }
+  .footer {
+    width: 100%;
+    height: 112px;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+    align-items: flex-end;
+    gap: 4em;
+  }
+  .footer__title {
+    padding-bottom: 0;
+  }
+  .footer__list {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-end;
+    gap: 1em;
+  }
+  .footer__link:nth-child(2) {
+    padding-right: 2em;
+  }
+}
+@media (min-width: 75em) {
+  .steps__tags {
+    gap: auto;
+  }
+}
+@media (min-width: 90em) {
+  .restaurants__cards {
+    gap: 3em 6em;
   }
 }
 
