--- a/assets/styles.css
+++ b/assets/styles.css
@@ -97,7 +97,7 @@ button {
   font-weight: 500;
   padding: 1em 0;
   gap: 1em;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2509803922);
+  box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.301);
 }
 
 .cta-btn {
@@ -152,7 +152,7 @@ button {
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: center;
+  top: 30%;
   left: -12px;
   font-family: "Roboto", sans-serif;
   font-size: 0.875rem;
@@ -310,10 +310,6 @@ button {
   color: #FFFFFF;
 }
 
-.none {
-  display: none;
-}
-
 .main-container {
   width: 100%;
   height: auto;
@@ -368,6 +364,10 @@ section:nth-child(2n-1) {
 }
 .hero .cta-btn {
   margin-top: 1em;
+}
+
+.none {
+  display: none;
 }
 
 .menu-banner {
@@ -469,7 +469,6 @@ section:nth-child(2n-1) {
 .step-card .step-card__txt, .step-card .step-card__icon {
   transition: all 0.3s ease-in-out;
 }
-
 .step-card:hover {
   transform: scale(1.02);
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.2078431373);
@@ -482,7 +481,6 @@ section:nth-child(2n-1) {
 .restaurant-card {
   transition: all 0.4s ease-in-out;
 }
-
 .restaurant-card:hover {
   transform: scale(1.02);
 }
@@ -490,7 +488,6 @@ section:nth-child(2n-1) {
 .cta-btn {
   transition: transform 0.4s ease-in-out, opacity 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
-
 .cta-btn:hover {
   opacity: 0.9;
   transform: scale(1.03);
@@ -597,7 +594,7 @@ section:nth-child(2n-1) {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: center;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: white;
@@ -614,7 +611,7 @@ section:nth-child(2n-1) {
   animation: spin 2s ease-in-out infinite;
 }
 
-.main-container {
+.hide-content {
   opacity: 0;
   animation: fadeIn 1s forwards;
   animation-delay: 2s;
@@ -662,7 +659,7 @@ section:nth-child(2n-1) {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
-    gap: auto;
+    gap: 2em;
   }
   .step-card {
     padding: 28px 22px;
@@ -698,7 +695,7 @@ section:nth-child(2n-1) {
 }
 @media (min-width: 75em) {
   .steps__tags {
-    gap: auto;
+    gap: 2em;
   }
 }
 @media (min-width: 90em) {
