--- a/sass/_animations.scss
+++ b/sass/_animations.scss
@@ -1,3 +1,4 @@
+// COEUR
 
 @keyframes heartbeat {
     0% {transform: scale(1)}
@@ -22,41 +23,42 @@
         animation: heartbeat 0.4s ease-in-out 0.4s 1 forwards;
         }
 
+// HOVER CARDS
+
 .step-card {
     @include transition(all, 0.4s, ease-in-out);
-
     .step-card__txt, .step-card__icon {
         @include transition(all, 0.3s, ease-in-out);
     }
-}
-
-.step-card:hover {
-    transform: scale(1.02);
-    box-shadow: 0px 4px 15px 0px #00000035;
-    background-color: $color-grey-light;
-
-    .step-card__txt, .step-card__icon {
-        color: $color-purple;	
+    &:hover {
+      transform: scale(1.02);
+      box-shadow: 0px 4px 15px 0px #00000035;
+      background-color: $color-grey-light;
+      .step-card__txt, .step-card__icon {
+          color: $color-purple;	
+      }
     }
 }
 
 .restaurant-card {
     @include transition(all, 0.4s, ease-in-out);
+    &:hover {
+      transform: scale(1.02);
+    }
 }
 
-.restaurant-card:hover {
-    transform: scale(1.02);
-}
+// CTA BOUTON VIOLET
 
 .cta-btn {
     transition: transform 0.4s ease-in-out, opacity 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-}
+    &:hover {
+      opacity: 0.9;
+      transform: scale(1.03);
+      box-shadow: 0px 4px 10px 0px #00000080;
+    }
+  }
 
-.cta-btn:hover {
-    opacity: 0.9;
-    transform: scale(1.03);
-    box-shadow: 0px 4px 10px 0px #00000080;
-}
+// SELECTION PLAT
 
 .select-trigger {
     @include transition(all, 0.4s, ease-in-out);
@@ -71,13 +73,14 @@
 .item-card:hover {
     .select-trigger {
         @include sizing(72px, 100%);
-    }
-    
+    } 
     .check-icon {
         opacity: 1;
         transform: rotate(0)    
     }
 }
+
+// APPARITION PLATS
 
 @keyframes fadeIn {
     0% { opacity: 0}
@@ -103,13 +106,14 @@ $sections: entrees, plats, desserts;
   }
 }
 
+// LOADER
 
   .loader-container {
     position: fixed;
     top: 0;
     left: 0;
     @include sizing(100%, 100%);
-    @include flex(center, center);
+    @include flex(column, center, center);
     background-color: white;
     z-index: 1000;
     opacity: 1;
@@ -124,7 +128,7 @@ $sections: entrees, plats, desserts;
   } 
   }
   
-  .main-container {
+  .hide-content {
     opacity: 0;
     animation: fadeIn 1s forwards;
     animation-delay: 2s;
