--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -117,6 +117,7 @@
 // MENU COMPONENTS
 
 .item-card {
+    background-color: $color-white;
     @include sizing(100%, 72px);
     border-radius: 15px;
     box-shadow: 0px 4.01px 15.04px 0px #0000001A;
